--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.14",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.5",
+    "next": "^14.2.23",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-lottie": "^1.2.4",
+    "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
