--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/fiber": "^8.17.14",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
+    "lottie-react": "^2.4.1",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.23",
     "next-themes": "^0.3.0",
