--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@react-three/fiber": "^8.17.14",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
+    "lottie-react": "^2.4.1",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^14.2.32",
+    "next": "^14.2.23",
     "next-themes": "^0.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
